野原ひろしの画像を追加

--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+
 <title>HTMLのサンプル</title>
 </head>
+
+<h1>見出し　ほげほげ</h1>
 <body>
 Hello World!
+<p>test</p>
+asfaefkajfjaoseijf;oa
+<img src="images/maxresdefault.jpg" alt="説明文" title="画像タイトル">
 </body>
 </html>
