--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 <h1>見出し　ほげほげ</h1>
 <body>
 Hello World!
+<iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.939876083342!2d139.76493631525892!3d35.6812401801945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bf7d908c4b1%3A0x2f54f52f69e6e31!2z5p2x5Lqs6YO95aSn5a2m5ZOB5bed!5e0!3m2!1sja!2sjp!4v1708936322332!5m2!1sja!2sjp"
+  width="600"
+  height="450"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
 <p>test</p>
 asfaefkajfjaoseijf;oa
 <img src="images/maxresdefault.jpg" alt="説明文" title="画像タイトル">
